--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Acquire Token Interactively" HorizontalAlignment="Left" Margin="41,24,0,0" VerticalAlignment="Top" Width="175" Click="AtsAti_Click"/>
+        <TextBox x:Name="Log" HorizontalAlignment="Left" Height="313" Margin="41,61,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="741"/>
     </Grid>
 </Window>
